[gd_scene load_steps=6 format=3 uid="uid://doo03nnqpthbc"]

[ext_resource type="Theme" uid="uid://cs33qvqc60ek3" path="res://theme.tres" id="1_abs0o"]
[ext_resource type="Script" path="res://items_workshop/item_inspector/points_editor/points_editor.gd" id="2_tr06g"]
[ext_resource type="PackedScene" uid="uid://csn4r5tegixac" path="res://items_workshop/item_inspector/points_editor/points_editor_point.tscn" id="3_rdro6"]
[ext_resource type="Texture2D" uid="uid://dp24hdhoar8qp" path="res://assets/images/missing.png" id="4_s2u68"]
[ext_resource type="Texture2D" uid="uid://bnadw66g0g8l" path="res://assets/images/icons/arrows_pointing_each_other.png" id="5_awpbt"]

[node name="PointsEditor" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(360, 360)
layout_mode = 3
anchors_preset = 0
mouse_force_pass_scroll_events = false
theme = ExtResource("1_abs0o")
script = ExtResource("2_tr06g")
point_scene = ExtResource("3_rdro6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"InsetPanel"

[node name="Canvas" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Reference" type="TextureRect" parent="Canvas"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_s2u68")

[node name="Points" type="Control" parent="Canvas"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
mouse_filter = 2

[node name="ResetTransformsButton" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/ResetTransformsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_awpbt")
expand_mode = 1
stretch_mode = 5

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="MarginContainer/ResetTransformsButton" to="." method="_on_reset_transforms_button_pressed"]
